# onyx

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: cli.md  format.md  library.md
src/onyx/: __init__.py  audio.py  cli.py  container.py  model.py  pipeline.py  synthesis.py  utils.py
src/onyx/core/: arch.py  container.py  registry.py  resolver.py  runner.py
src/onyx/models/mdx/: __init__.py  separator.py  stft.py
src/onyx/models/rvc/: __init__.py  contentvec.py  f0.py  index.py  synthesis.py
